# keybord_auto

./: Cargo.toml  pos_config.toml
src/: config.rs  mail.rs  main.rs  util.rs
